SUBDIRS = man

EXTRA_DIST = \
OpenWBEM_Getting_Started_Guide.sxw \
ACL.HOWTO \
AuthModule.HOWTO \
HowToCreateAMinimalOpenWBEM \
PORTING.txt \
ProviderInterface.HOWTO \
openwbem-faq.html \
pg.tex \
PerlIFC.sxw \
remote_providers.txt \
local_authentication.txt \
logging.txt \
architecture.txt \
openwbem_coding_guide.txt \
providers.txt

